# ImageRendering

./: CMakeLists.txt
maps/: island.ppm  valley.pgm
src/: main.c  render.c  unit_tests.c
test/ref_images/: public.island01.ppm  public.pyramids01.ppm
